Опит за домашно

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Casino Online</title>
+    <link rel="stylesheet" href="styles-homework.css" />
   </head>
   <body>
     <header>
@@ -19,7 +20,21 @@
     </header>
     <main>
       <h1>More abouts us</h1>
-      |
+
+      <section class="image-container">
+        <img
+          width="350"
+          alt="Egypt quest"
+          src="./assets/egypt-quest-jackpot-system-egt-romania.png"
+        />
+        <img
+          width="350"
+          alt="JacpotCards"
+          src="./assets/JackpotCards_1920x600_new.jpg"
+        />
+        <img width="350" alt="BellLink" src="./assets/Bell Link_1920x600.png" />
+      </section>
+
       <section>
         <p>
           We are a modern and forward-looking company subsidized by Euro Games
@@ -28,43 +43,6 @@
           of highly passionate professionals, we create innovative products,
           always having in mind our clients success.
         </p>
-      </section>
-
-      <section>
-        <img width="250" alt="Click" src="./egtjpg.jpg" />
-      </section>
-
-      <table>
-        <style>
-          table,
-          th,
-          td {
-            border: 1px solid black;
-            color: blue;
-          }
-        </style>
-        <h2>Gaming</h2>
-
-        <tr>
-          <th>Casino</th>
-          <th>Jackpot</th>
-          <th>Campaign</th>
-        </tr>
-        <tr>
-          <td>Rise of Ra</td>
-          <td>Bell link</td>
-          <td>Sport Campaign</td>
-        </tr>
-        <tr>
-          <td>Burning Hot</td>
-          <td>Jackpots Cards</td>
-          <td>Casino Campaign</td>
-        </tr>
-      </table>
-
-      <section>
-        <img width="350" src="./jackpotcards.jfif" alt="JacpotCards" />
-        <img width="350" src="./assets/Bell Link_1920x600.png" alt="BellLink" />
       </section>
 
       <section>
